# hos-trip-planner

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/hos/: engine.py  routing.py  rules.py  serializers.py  urls.py  views.py
backend/hos/tests/: test_engine.py  test_routing.py  test_rules.py  test_serializers.py  test_views.py
docs/adr/: 001-architecture.md  002-geo-stack.md
frontend/: package-lock.json  package.json
frontend/app/: error.tsx  layout.tsx  page.tsx  providers.tsx  theme.test.ts  theme.ts
frontend/app/api/geocode/: route.test.ts  route.ts
frontend/app/api/plan-trip/: route.test.ts  route.ts
frontend/app/api/reverse/: route.test.ts  route.ts
frontend/app/components/: DailyLogSheet.test.tsx  DailyLogSheet.tsx  Itinerary.test.tsx  Itinerary.tsx  LocationField.test.tsx  LocationField.tsx  MapView.test.tsx  MapView.tsx  TripPlanner.test.tsx  TripPlanner.tsx
frontend/app/lib/: format.ts  geocoding.test.ts  geocoding.ts  routeDays.test.ts  routeDays.ts  tripMarkers.test.ts  tripMarkers.ts  tripSummary.test.ts  tripSummary.ts
frontend/test/: smoke.test.tsx
tasks/: README.md  T10.md  T11.md  T12.md  T13.md  T14.md  T2.md  T3.md  T4.md  T5.md  T5a.md  T6.md  T6a.md  T6b.md  T7.md  T8.md  T9.md
